--- a/projects/28-jsProjects/0-fiftyProjects/39-cookie.html
+++ b/projects/28-jsProjects/0-fiftyProjects/39-cookie.html
@@ -28,6 +28,7 @@
 
 <body>
   <!-- Started at 9:30PM / Jan3, 2021 -->
+  <!-- Coded for 2 hours -->
   <input type="text" name="cookieName" value="cookie name">
   <input type="text" name="cookieValue" value="cookie value">
   <input type="date" name="cookieExpire">
