--- a/projects/28-jsProjects/0-fiftyProjects/41-function.html
+++ b/projects/28-jsProjects/0-fiftyProjects/41-function.html
@@ -14,9 +14,9 @@
         let myFunctionList;
         let funList = [];
         const movementArr = ["right", "left", "up", "down"];
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             myBlock = document.createElement("div");
-            myBlock.textContent = "Hello World!";
+            myBlock.textContent = "Hello World! Press C";
             let style = "background:red;color:white;width:100px;height:100px;text-align:center;position:absolute;top:100px;left:150px;";
             myBlock.style.cssText = style;
             document.body.appendChild(myBlock);
@@ -25,19 +25,19 @@
             // myFunctionList.style.cssText = style + "background:blue;";
         })
 
-        document.addEventListener("keydown", function(e) {
+        document.addEventListener("keydown", function (e) {
             e.preventDefault();
             let keyC = e.keyCode;
             if (keyC === 37) addFun("left");
             else if (keyC === 38) addFun("up");
             else if (keyC === 39) addFun("right");
             else if (keyC === 40) addFun("down");
-            else if (keyC === 96) myBlock.style.background = randomColor();
+            else if (keyC === 67) myBlock.style.background = randomColor();
             else if (keyC === 82) {
                 let temp = movementArr[Math.floor(Math.random() * movementArr.length)];
                 addFun(temp);
             } else if (keyC === 13 || keyC === 32) mover();
-            console.log(e.keyCode);
+            // console.log(e.keyCode);
         })
 
         function randomColor() {
@@ -75,25 +75,25 @@
             let span = document.createElement('span');
             span.textContent = "+" + val;
             span.style.cssText = "padding:5px;border:1px solid #ddd;";
-            span.addEventListener("mouseover", function() {
+            span.addEventListener("mouseover", function () {
                 this.style.background = "red";
                 this.style.color = "white";
             })
-            span.addEventListener("mouseout", function() {
+            span.addEventListener("mouseout", function () {
                 this.style.background = "white";
                 this.style.color = "black";
             })
-            span.addEventListener('click', function() {
+            span.addEventListener('click', function () {
                 let curIndex = funList.indexOf(this);
-                console.log(curIndex);
+                // console.log(curIndex);
                 let tempRemove = funList.splice(curIndex, 1);
-                console.log(tempRemove);
+                // console.log(tempRemove);
                 myFunctionList.removeChild(this);
 
             })
             myFunctionList.appendChild(span);
             funList.push(span);
-            console.log(funList);
+            // console.log(funList);
 
         }
 
