--- a/projects/28-jsProjects/0-fiftyProjects/42-cardGame.html
+++ b/projects/28-jsProjects/0-fiftyProjects/42-cardGame.html
@@ -63,15 +63,30 @@
   <button class="hideButton">Lower</button>
 
   <script>
-    const message = document.querySelector(".message");
+    const msg = document.querySelector(".message");
     const score = document.querySelector(".score");
-    const button = document.querySelectorAll("button");
+    const btn = document.querySelectorAll("button");
     const gameplay = document.querySelector(".gameplay");
     let curCardValue = 0;
     let scoreValue = 0;
     let deck = [];
     const ranks = [2, 3, 4, 5, 6, 7, 8, 9, 10, "J", "Q", "K", "A"];
     const suits = ["hearts", "diams", "clubs", "spades"];
+    /*
+      1. loop thru the buttons using for loop where i is less than btn.length
+        - CLO btn[i] & addEveLis to btn[i] with func called playGame
+        - 
+    */
+    for (let i = 0; i < btn.length; i++) {
+      console.log(btn[i]);
+
+      btn[i].addEventListener('click', playGame);
+
+    }
+    function playGame() {
+      console.log('the game begins');
+
+    }
   </script>
 </body>
 
