--- a/projects/28-jsProjects/0-fiftyProjects/42-cardGame.html
+++ b/projects/28-jsProjects/0-fiftyProjects/42-cardGame.html
@@ -53,7 +53,7 @@
 
 <body>
   <!-- 9:20PM / Jan 6 / 2021 -->
-  <!-- coded for 0.5 hours -->
+  <!-- coded for 2 hours -->
   <div>Streak:
     <div class="score">0</div>
   </div>
@@ -83,9 +83,8 @@
         - set drawCard() as value for myCard variable
         - if temp is equal to "Start" then...
           - update msg html with "higher or lower"
-          (clear out anything that's available in the html of gameplay)
-          - set gameplay's innerHTML to myCard.rank + myCard.suit
-          - makeCard()
+          - clear out anything that's available in the html of gameplay
+          - makeCard(myCard)
           - toggleBtns()
       4. drawCard()
         - if deck.length is higher than 0 then
@@ -106,6 +105,9 @@
             - push card into the global array called "deck"
         - CLO deck
       5. makeCard()
+        - let html1 = card.rank +"<br>"+card.suit+";";
+        - create a div and set its html to html1
+        - append the div to gameplay
     */
     for (let i = 0; i < btn.length; i++) {
       btn[i].addEventListener('click', playGame);
@@ -122,8 +124,8 @@
       let myCard = drawCard();
       if (temp == "Start") {
         msg.innerHTML = "Higher or Lower?";
-        gameplay.innerHTML = myCard.rank + myCard.suit;
-        makeCard();
+        gameplay.innerHTML = "";
+        makeCard(myCard);
         toggleBtns();
       }
     }
@@ -154,10 +156,14 @@
       console.log(deck);
     }
 
-    function makeCard() {
-      console.log('makeCard function');
-
+    function makeCard(card) {
+      let html1 = card.rank + "<br>&" + card.suit + ";";
+      let div = document.createElement('div');
+      div.classList.add('card');
+      div.innerHTML = html1;
+      gameplay.appendChild(div);
     }
+
   </script>
 </body>
 
