Update my portfolio
remove apps with almost no functions and add apps with different functions

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="row">
 
                 <!-- Portfolio Item 1 -->
-                <div class="col-md-6 col-lg-4">
+                <!-- <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal8">
                         <div
                             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -107,36 +107,10 @@
                         </div>
                         <img class="img-fluid" src="img/portfolio/proj-11.jpg" alt="">
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Portfolio Item 10 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal10">
-                        <div
-                            class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-white">
-                                <i class="fas fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/portfolio/proj-13.jpg" alt="">
-                    </div>
-                </div>
-
-                <!-- Portfolio Item 13 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal13">
-                        <div
-                            class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-white">
-                                <i class="fas fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/portfolio/proj-16.jpg" alt="">
-                    </div>
-                </div>
-
-                <!-- Portfolio Item 14 -->
-                <div class="col-md-6 col-lg-4">
+                <!-- <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal14">
                         <div
                             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -146,9 +120,23 @@
                         </div>
                         <img class="img-fluid" src="img/portfolio/proj-17.jpg" alt="">
                     </div>
-                </div>
+                </div> -->
 
-                <!-- Portfolio Item 15 -->
+
+                <!-- Portfolio Item 13 -->
+                <!-- <div class="col-md-6 col-lg-4">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal13">
+                        <div
+                            class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/proj-16.jpg" alt="">
+                    </div>
+                </div> -->
+
+                <!-- Portfolio Item 14 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal15">
                         <div
@@ -162,7 +150,7 @@
                 </div>
 
 
-                <!-- Portfolio Item 23 -->
+                <!-- Portfolio Item 15 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal23">
                         <div
@@ -171,9 +159,24 @@
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/proj-27.jpg" alt="">
+                        <img class="img-fluid" src="img/portfolio/proj-33.jpg" alt="">
                     </div>
                 </div>
+
+
+                <!-- Portfolio Item 23 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal10">
+                        <div
+                            class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/proj-36.jpg" alt="">
+                    </div>
+                </div>
+
 
                 <!-- Portfolio Item 24 -->
                 <div class="col-md-6 col-lg-4">
@@ -543,7 +546,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Grid Theme</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">box chaser</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -553,11 +556,11 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-13.jpg" alt="">
+                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-36.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">August 2019 - After creating some projects, I discovered an awesome
-                                    thing called CSS Grid and built this simple website using only grid. It is super
-                                    responsive and there is no bootstrap at all.</p>
+                                <p class="mb-5">2020 - All the elements on the page are built through Vanilla
+                                    Javascript which means that it is completely dynamic and there is almost zero html
+                                    and the boxes can be controlled with keyboard buttons.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/13-gridtheme/index.html" target="_blank">See
@@ -707,7 +710,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Calculator</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">To Do List</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -717,14 +720,14 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-27.jpg" alt="">
+                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-33.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">April 2020 - I thought I would have to write at least 100 lines of
-                                    JavaScript code to get this to work. Boy was I wrong! It took only a few lines of
-                                    code to build this awesome calculator.</p>
+                                <p class="mb-5">August 2020 - Pure HTML, CSS and Vanilla JavaScript was used to build
+                                    this awesome looking to do list. It stores the todo list items in the local storage
+                                    so they don't disappear if you refresh the page.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close</button>
-                                <a class="btn btn-primary" href="projects/28-jsProjects/10-calculator/index.html"
+                                <a class="btn btn-primary" href="projects/28-jsProjects/11-toDoList/index.html"
                                     target="_blank">See Page</a>
                             </div>
                         </div>
